// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JsonScheduleBackend can parse a FOSDEM JSON format: auditoriums 1`] = `
Map {
  "5" => {
    "extraPeople": [
      {
        "email": "conal@example.org",
        "id": "1",
        "matrix_id": "@conal:example.org",
        "name": "Conal Coordinator",
        "role": "coordinator",
      },
    ],
    "id": "5",
    "isPhysical": true,
    "kind": "auditorium",
    "name": "Open CAD/CAM devroom",
    "slug": "open_cad_cam",
    "talks": Map {
      "3" => {
        "auditoriumId": "5",
        "dateTs": 1706745600000,
        "endTime": 1706778000000,
        "id": "3",
        "livestream_endTime": 1706778000000,
        "prerecorded": false,
        "qa_startTime": 0,
        "speakers": [
          {
            "email": "ioferrell@localhost",
            "id": "4",
            "matrix_id": "",
            "name": "Iarlaith O'Ferrell",
            "role": "speaker",
          },
          {
            "email": "niamh@localhost",
            "id": "5",
            "matrix_id": "",
            "name": "Niamh O'Donnellan",
            "role": "speaker",
          },
          {
            "email": "conal@example.org",
            "id": "1",
            "matrix_id": "@conal:example.org",
            "name": "Conal Cördinator",
            "role": "coordinator",
          },
        ],
        "startTime": 1706778000000,
        "subtitle": "",
        "title": "Panacea3D: The Final Word in Open Source 3D Solid Modelling",
      },
    },
  },
  "6" => {
    "extraPeople": [
      {
        "email": "chloe@example.org",
        "id": "246",
        "matrix_id": "@chloe:example.org",
        "name": "Chloé Coordinator",
        "role": "coordinator",
      },
    ],
    "id": "6",
    "isPhysical": true,
    "kind": "auditorium",
    "name": "Self-Hosted Software devroom",
    "slug": "selfhosting",
    "talks": Map {
      "14" => {
        "auditoriumId": "6",
        "dateTs": 1706745600000,
        "endTime": 1706779800000,
        "id": "14",
        "livestream_endTime": 1706779800000,
        "prerecorded": false,
        "qa_startTime": 0,
        "speakers": [
          {
            "email": "tysnr@localhost",
            "id": "42",
            "matrix_id": "",
            "name": "Yasunori Takeda",
            "role": "speaker",
          },
          {
            "email": "chloe@example.org",
            "id": "246",
            "matrix_id": "@chloe:example.org",
            "name": "Chloé Coordinator",
            "role": "coordinator",
          },
        ],
        "startTime": 1706779800000,
        "subtitle": "",
        "title": "A new architecture for Local-First Computing without boundaries",
      },
      "19" => {
        "auditoriumId": "6",
        "dateTs": 1706745600000,
        "endTime": 1706783400000,
        "id": "19",
        "livestream_endTime": 1706783400000,
        "prerecorded": false,
        "qa_startTime": 0,
        "speakers": [
          {
            "email": "vivaldo@localhost",
            "id": "94",
            "matrix_id": "@vivaldo:example.org",
            "name": "Vivaldo Corradetti",
            "role": "speaker",
          },
          {
            "email": "chloe@example.org",
            "id": "246",
            "matrix_id": "@chloe:example.org",
            "name": "Chloé Coordinator",
            "role": "coordinator",
          },
        ],
        "startTime": 1706783400000,
        "subtitle": "",
        "title": "Devising a Blended Federation Topology that reaches Cosmique Perfection",
      },
    },
  },
  "7" => {
    "extraPeople": [
      {
        "email": "bert@example.org",
        "id": "0",
        "matrix_id": "@bert:example.org",
        "name": "Bert Boss",
        "role": "coordinator",
      },
    ],
    "id": "7",
    "isPhysical": true,
    "kind": "auditorium",
    "name": "Keynotes (TALKS NOT ANNOUNCED YET)",
    "slug": "key_notes",
    "talks": Map {},
  },
}
`;

exports[`JsonScheduleBackend can parse a FOSDEM JSON format: talks 1`] = `
Map {
  "3" => {
    "auditoriumId": "5",
    "dateTs": 1706745600000,
    "endTime": 1706778000000,
    "id": "3",
    "livestream_endTime": 1706778000000,
    "prerecorded": false,
    "qa_startTime": 0,
    "speakers": [
      {
        "email": "ioferrell@localhost",
        "id": "4",
        "matrix_id": "",
        "name": "Iarlaith O'Ferrell",
        "role": "speaker",
      },
      {
        "email": "niamh@localhost",
        "id": "5",
        "matrix_id": "",
        "name": "Niamh O'Donnellan",
        "role": "speaker",
      },
      {
        "email": "conal@example.org",
        "id": "1",
        "matrix_id": "@conal:example.org",
        "name": "Conal Cördinator",
        "role": "coordinator",
      },
    ],
    "startTime": 1706778000000,
    "subtitle": "",
    "title": "Panacea3D: The Final Word in Open Source 3D Solid Modelling",
  },
  "14" => {
    "auditoriumId": "6",
    "dateTs": 1706745600000,
    "endTime": 1706779800000,
    "id": "14",
    "livestream_endTime": 1706779800000,
    "prerecorded": false,
    "qa_startTime": 0,
    "speakers": [
      {
        "email": "tysnr@localhost",
        "id": "42",
        "matrix_id": "",
        "name": "Yasunori Takeda",
        "role": "speaker",
      },
      {
        "email": "chloe@example.org",
        "id": "246",
        "matrix_id": "@chloe:example.org",
        "name": "Chloé Coordinator",
        "role": "coordinator",
      },
    ],
    "startTime": 1706779800000,
    "subtitle": "",
    "title": "A new architecture for Local-First Computing without boundaries",
  },
  "19" => {
    "auditoriumId": "6",
    "dateTs": 1706745600000,
    "endTime": 1706783400000,
    "id": "19",
    "livestream_endTime": 1706783400000,
    "prerecorded": false,
    "qa_startTime": 0,
    "speakers": [
      {
        "email": "vivaldo@localhost",
        "id": "94",
        "matrix_id": "@vivaldo:example.org",
        "name": "Vivaldo Corradetti",
        "role": "speaker",
      },
      {
        "email": "chloe@example.org",
        "id": "246",
        "matrix_id": "@chloe:example.org",
        "name": "Chloé Coordinator",
        "role": "coordinator",
      },
    ],
    "startTime": 1706783400000,
    "subtitle": "",
    "title": "Devising a Blended Federation Topology that reaches Cosmique Perfection",
  },
}
`;
